src/objects/Delivery__c.object
<CustomObject>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryAddress__c</fullName>
        <label>Delivery Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERPOrderNumber__c</fullName>
        <label>ERP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceAccount__c</fullName>
        <label>Invoice Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderAccount__c</fullName>
        <label>Order Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PackingSlipNumber__c</fullName>
        <label>Packing Slip Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShipToId__c</fullName>
        <label>Ship To Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingURL__c</fullName>
        <label>Tracking URL</label>
        <type>Url</type>
    </fields>
    <label>Delivery</label>
    <nameField>
        <label>Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>